# shit-bruce-says

./: .ebignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  .tflint.hcl  Dockerfile  LICENSE.txt  Makefile  README.md  acm.tf  api-gateway.tf  app.py  application.py  cloudfront.tf  cloudwatch.tf  docker-compose.yml  dynamodb.tf  eventbridge.tf  github-oidc.tf  iam.tf  lambda.tf  locals.tf  main.tf  mise.toml  outputs.tf  requirements.txt  route53.tf  s3-lambda-artifacts.tf  s3-static.tf  template.yaml  test_application.py  variables.tf  versions.tf
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci-pr.yml  ci.yml  deploy.yml  iam-wildcards.yml  publish-lambda.yml  terraform-apply.yml  terraform-plan.yml
lambda/: app.py  dev_create_table.py  dev_run.py  migrate_quotes.py  page_generator.py  pyproject.toml
lambda/tests/: test_app.py  test_page_generator.py  test_publish_lambda.py
templates/: index.html
tools/: compute_deploy_context.py  generate_quote_pages.py  generate_seo_page.py  invoke_page_generator.py  package-lambda.sh  publish_lambda.py  render_index.py  watch_local_site.py
web/: app.js  index.html.tpl  robots.txt  sitemap.xml  styles.css
